# recommender-geometric

./: Dockerfile  README.md  cli.py  download_data.sh  obg_dataset.py  pyproject.toml
conf/: config.yaml
conf/base/: catalog.yml  logging.yml  parameters.yaml
conf/base/catalog/: 01_raw.yaml  04_feature.yaml  __default__.yml  temp.yaml
conf/base/parameters/: data_prep.yml  dataprep_ratings_network.yaml  dataprep_ratings_network.yml  make_ratings_network.yml  recommender_model.yaml  train_model.yml
docs/source/: conf.py  index.rst
extras/datasets/: __init__.py  spark_dataframe.py
notebooks/: torch_distributed_demo.py  visualize_samplers.ipynb
src/: setup.py
src/recommender_geometric/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/recommender_geometric/pipelines/data_prep/: README.md  __init__.py  nodes.py  pipeline.py
src/recommender_geometric/pipelines/dataprep_ratings_network/: README.md  __init__.py  nodes.py  pipeline.py
src/recommender_geometric/pipelines/make_ratings_network/: README.md  __init__.py  pipeline.py
src/recommender_geometric/pipelines/recommender_model/: README.md  __init__.py  large_dataset.py  model.py  nodes.py  pipeline.py  recommender_model.py
src/recommender_geometric/pipelines/train_model/: README.md  __init__.py  nodes.py  pipeline.py
src/recommender_geometric/recommender_model/: model.py
src/tests/: test_run.py
src/tests/pipelines/data_prep/: test_pipeline.py
src/tests/pipelines/dataprep_ratings_network/: test_pipeline.py
src/tests/pipelines/make_ratings_network/: test_pipeline.py
src/tests/pipelines/recommender_model/: test_pipeline.py
src/tests/pipelines/train_model/: test_pipeline.py
