[tool.poetry]
name = "recommender-geometric"
version = "0.1.0"
description = ""
authors = ["bertrand <bertrand.gallice.pro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
kedro = { extras = ["spark"], version = "^0.18.4" }
pyspark = "^3.3.1"
pyarrow = ">=6.0.1,<8.0.0"
pandas = "^1.5.3"
hydra-core = "^1.3.1"
flatten-dict = "^0.4.2"
torch = "^1.13.1"
#pytorch-cuda= {platform="linux", version="^11.7"}
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
pyg-lib = [
    { platform = "darwin", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcpu/pyg_lib-0.1.0%2Bpt113-cp38-cp38-macosx_10_15_x86_64.whl" },
    { platform = "linux", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/pyg_lib-0.1.0%2Bpt113cu117-cp38-cp38-linux_x86_64.whl" }
]
torch-cluster = [
    { platform = "darwin", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_cluster-1.6.0-cp38-cp38-macosx_10_15_x86_64.whl" },
    { platform = "linux", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_cluster-1.6.0%2Bpt113cu117-cp38-cp38-linux_x86_64.whl" }
]
torch-scatter = [
    { platform = "darwin", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_scatter-2.1.0-cp38-cp38-macosx_10_15_x86_64.whl" },
    { platform = "linux", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_scatter-2.0.9-cp38-cp38-linux_x86_64.whl" }
]
torch-sparse = [
    { platform = "darwin", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_sparse-0.6.16-cp38-cp38-macosx_10_15_x86_64.whl" },
    { platform = "linux", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_sparse-0.6.16%2Bpt113cu117-cp38-cp38-linux_x86_64.whl" }
]
torch-spline-conv = [
    { platform = "darwin", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_spline_conv-1.2.1-cp38-cp38-macosx_10_15_x86_64.whl" },
    { platform = "linux", url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_spline_conv-1.2.1%2Bpt113cu117-cp38-cp38-linux_x86_64.whl" }
]
torch-geometric = "^2.2.0"
#ray = { extras = ["air"], version = "^2.2.0" }
#modin = "^0.18.1"
#raydp = "^1.5.0"
google-cloud-storage = "^2.7.0"
tensorboard = "^2.12.0"
pytorch-lightning = "^1.9.1"
petastorm = "^0.12.1"

[tool.poetry.group.dev.dependencies]
kedro-viz = "^5.2.1"
ipykernel = "^6.21.1"
matplotlib = "^3.6.3"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core==1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "recommender_geometric"
project_name = "Recommender Geometric"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/recommender_geometric -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
